  * fix a typo in a link
  * dpkg-buildpackage -m<addr> flag was changed for -e<addr> when NMU'ing;
    update documentation accordingly
    closes: #101676
  * Matt Zimmerman fixes up some wording in the section talking about
    forwarding bugs upstream
    closes: #98312
  * provide proper l10n for SGML date entities; now we have &date-<LANG>
    entities which should be used

 -- Adam Di Carlo <aph@debian.org>  Thu, 21 Jun 2001 14:35:03 -0400

developers-reference (2.8.6) unstable; urgency=low

  * fix a typo, thanks to Antoine Hulin
  * French version: completely up-to-date now
  * Makefile: add a 'validate' target
  * prepare and ship "upstream" ChangeLog; move the debian changelog to
    changelog.Debian.gz
  * all versions: change the email address to use when orphaning
    closes: #93727

 -- Adam Di Carlo <aph@debian.org>  Fri, 13 Apr 2001 03:32:08 -0400

developers-reference (2.8.5) unstable; urgency=low

  * expunge references to the Debian Packaging Manual, which is now in the
    Policy
  * Japanese version: also comment out some references packaging manual;
    this translation needs updating
  * deny request to shut down non-maintainer bug maintenance bug closure
    practices (closes: Bug#88623)
  * add some advice about U.S. citizens uploading to non-US
    (closes: Bug#89694)
  * debian/control: Build-Depends should have been Build-Depends-Indep
  * French version: First complete translation of the Debian developer's
    reference guide.  Much work done by Antoine Hulin. Reviewed by Nicolas
    Bertolissio.
  * Portuguese version: work is started by Carlos Laviola, nothing
    included yet, however

 -- Adam Di Carlo <aph@debian.org>  Sun,  8 Apr 2001 01:25:51 -0400

developers-reference (2.8.4) unstable; urgency=low

  * debian/control: remove reference to obsolete packaging-manual package
    (closes: Bug#86505)
  * debian/control: fill in the description a bit more
  * doc-base: index.html corrected to be index.en.html
    (closes: Bug#85933)