@@ -3,7 +3,7 @@ Section: doc
 Priority: optional
 Maintainer: Adam Di Carlo <aph@debian.org>
 Standards-Version: 3.2.1
-Build-Depends-Indep: debiandoc-sgml, tetex-bin, tetex-extra
+Build-Depends-Indep: debiandoc-sgml (>= 1.1.48), tetex-bin, tetex-extra
 
 Package: developers-reference
 Architecture: all
@@ -14,5 +14,8 @@ Description: Debian Developer's Reference
  guidelines and best practices which has been established by for the
  community of Debian developers.
  .
- Table of Contents:
+ This package contains the English, as well as Japanese and French
+ versions of the Developer's Reference.
+ .
+ Table of Contents (in English):
  .
