@@ -10,8 +10,10 @@ developers-reference (2.8.7) unstable; urgency=low
     closes: #98312
   * provide proper l10n for SGML date entities; now we have &date-<LANG>
     entities which should be used
+  * debian/rules: fixes for new debiandoc-sgml
+  * debian/control: depend on debiandoc-sgml 1.1.48 or better
 
- -- Adam Di Carlo <aph@debian.org>  Thu, 21 Jun 2001 14:35:03 -0400
+ -- Adam Di Carlo <aph@debian.org>  Thu, 21 Jun 2001 14:43:42 -0400
 
 developers-reference (2.8.6) unstable; urgency=low
 
